styles.css
/* MAIN ELEMENTS START */

html {
    background-color: #e7be6e;
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
    margin: 0;
    font-family: Arial, sans-serif;

    animation: fadeInAnimation ease 3s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}

footer, footer a:visited, footer a:link{
    text-align: center;
    padding-bottom: 5vw;
    color: #8a88be;
    font-size: 2.0em;
    font-family: comic sans ms;
    text-decoration: none;
}

@media only screen and (max-width: 768px) {
    footer, footer a:visited, footer a:link{
        text-align: center;
        padding-bottom: 5vw;
        color: #8a88be;
        font-size: 1.6em;
        font-family: comic sans ms;
        text-decoration: none;
    }
}

/* MAIN ELEMENTS END */

/* NAV ELEMENTS START */

nav {
    overflow: hidden;
    position: absolute;
    z-index: 1;
    width: 100vw;
}

nav img {
    position: relative;
    height: 13vw;
    top: 2vw;
    left: 8vw;
}

nav .logoSection {
    margin-top: -3vw;
    float: left;
}

nav .imageSection {
    margin-right: 4vw;
    float: right;
}

nav .imageSection img {
    height: 10vw;
    float: left;
    margin-top: -3vw;
    margin-right: 15vw;
    left: 12vw;
}

#workNav {
    overflow: hidden;
    display: block;
    width: 100vw;
}

#workNav img {
    position: relative;
    height: 13vw;
    top: 2vw;
    left: 8vw;
}

#workNav .logoSection {
    margin-top: -3vw;
    float: left;
}

#workNav .imageSection {
    margin-right: 4vw;
    float: right;
}

#workNav .imageSection img {
    height: 10vw;
    float: left;
    margin-top: -3vw;
    margin-right: 15vw;
    left: 12vw;
}

@media only screen and (max-width: 768px) {
    nav {
        overflow: hidden;
        position: absolute;
        z-index: 1;
        width: 100vw;
        padding-top: 5vw;
        padding-bottom: 7vw;
    }

    nav img {
        scale: 188%;
        position: relative;
        height: 13vw;
        top: 2vw;
        left: 8vw;
    }
    
    nav .logoSection {
        margin-top: -3vw;
        float: left;
		left: 34vw;
		position: relative;
    }
    
    nav .imageSection {
        margin-right: 5vw;
        float: right;
		margin-top: 5vw;
    }
    
    nav .imageSection img {
        height: 10vw;
        float: left;
        margin-top: -3vw;
        margin-right: 20vw;
        left: 12vw;
    }

    #workNav {
        overflow: hidden;
        display: block;
        width: 100vw;
        padding-top: 5vw;
        padding-bottom: 7vw;
    }
    
    #workNav img {
        scale: 188%;
        position: relative;
        height: 13vw;
        top: 2vw;
        left: 8vw;
    }
    
    #workNav .logoSection {
        margin-top: -3vw;
        float: left;
        left: 34vw;
		position: relative;
    }
    
    #workNav .imageSection {
        margin-right: 4vw;
        float: right;
        margin-top: 5vw;
    }
    
    #workNav .imageSection img {
        height: 10vw;
        float: left;
        margin-top: -3vw;
        margin-right: 20vw;
        left: 12vw;
    }
}

/* NAV ELEMENTS END */

/* WORK PAGE ELEMENTS START */

#starterText {
    display: inline-block;
    width: 100vw;
    position: relative;
    overflow: hidden;
    margin-bottom: 20vw;
}

#introImg {
    margin-top: 1.4vw;
    margin-left: 27vw;
    height: 26vw;

    animation: scaleUp 1s linear infinite;
    animation-play-state: paused;
    animation-delay: calc(var(--scroll) * -1s);

    animation-iteration-count: 1;
    animation-fill-mode: both;
}

@keyframes scaleUp {
    to {
        transform: scale(50);
    }
}

#imageContainer {
    max-width: 100vw;
    width: 100vw;
    object-fit: cover;
    overflow: hidden;
    justify-content: center;
    display: block;
}

#imageContainer .tallImg {
    border-style: solid;
    border-width: 0.5vw;
    border-color: #e1a559;
    width: 48.81vw;
    height: 100%;
    object-fit: cover;
    display: inline-block;
}

#imageContainer .threeWayImg {
    border-style: solid;
    border-width: 0.5vw;
    border-color: #e1a559;
    width: 32.1vw;
    height: 100%;
    object-fit: cover;
    display: inline-block;
}

#imageContainer .longImg {
    border-style: solid;
    border-width: 0.5vw;
    border-color: #e1a559;
    height: 100%;
    width: 99vw;
    display: inline-block;
}

.comicStrip {
    padding-top: 0.52vw;
}

.mediumDesc {
    text-align: center;
    margin-bottom: 2vw;
}

.individualImage {
    scale: 75%;
    position: relative;
    display: inline-block;
}

.imageCaption {
    display: none;
}

.imageCaption {
    display: flex;
    box-shadow: 0px 0px 999px 999px rgba(255,255,255, 0.9) inset, 0px 0px 5px 5px rgba(255,255,255, 0.9);
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0%;
    left: 0%;
    margin: 0;
    padding-top: 0.5vw;
    align-items: center;
    justify-content: center;
    opacity: 0;
    transition: opacity 300ms ease-in-out;

    color: black;
    font-size: 2.5em;
    font-family: comic sans ms;
    text-align: center;
}

.longImg:hover + .imageCaption,
.tallImg:hover + .imageCaption,
.individualImage a:hover + .imageCaption,
.imageCaption:hover {
    opacity: 1;
}

#imageViewer {
    z-index: 1;
    display: none;
    opacity: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-size: contain;
    background-repeat: no-repeat no-repeat;
    background-position: center center;
    background-color: rgba(255,255,255, 1.0);
    user-select: none;

    animation: fadeInAnimation ease 500ms;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

#leftArrow, #leftArrow:visited, #leftArrow:link {
    position: relative;
    float: left;
    text-align: center;
    top: 35%;
    padding-left: 1vw;
    color: #8a88be;
    font-size: 10.0em;
    font-family: comic sans ms;
    text-decoration: none;
    cursor: pointer;
}

#rightArrow, #rightArrow:visited, #rightArrow:link {
    position: relative;
    float: right;
    text-align: center;
    top: 35%;
    padding-right: 1vw;
    color: #8a88be;
    font-size: 10.0em;
    font-family: comic sans ms;
    text-decoration: none;
    cursor: pointer;
}

@media only screen and (max-width: 768px) {
    #starterText {
        scale: 200%;
        display: inline-block;
        width: 100vw;
        position: relative;
        overflow: hidden;
        margin-bottom: 10vw;
        margin-top: 15vw;
        left: 5%;
        top: 5%;
    }

    .imageCaption {
        display: flex;
        box-shadow: 0px 0px 999px 999px rgba(255,255,255, 0.9) inset, 0px 0px 5px 5px rgba(255,255,255, 0.9);
        position: absolute;
        width: 100%;
        height: 100%;
        bottom: 0%;
        left: 0%;
        margin: 0;
        padding-top: 0.5vw;
        align-items: center;
        justify-content: center;
        opacity: 0;
        transition: opacity 300ms ease-in-out;
    
        color: black;
        font-size: 6vw;
        font-family: comic sans ms;
        text-align: center;
        word-wrap: normal;
    }

    .individualImage {
        scale: 75%;
        position: relative;
        display: inline-block;
    }

    #imageContainer .tallImg {
        border-style: solid;
        border-width: 0.5vw;
        border-color: #e1a559;
        width: 100vw;
        height: 100%;
        object-fit: cover;
        display: inline-block;
    }

    #imageContainer .threeWayImg {
        border-style: solid;
        border-width: 0.5vw;
        border-color: #e1a559;
        width: 100vw;
        height: 100%;
        object-fit: cover;
        display: inline-block;
    }

    #leftArrow, #leftArrow:visited, #leftArrow:link {
        position: relative;
        float: left;
        text-align: center;
        top: 75%;
        padding-left: 1vw;
        color: #8a88be;
        font-size: 10.0em;
        font-family: comic sans ms;
        text-decoration: none;
        cursor: pointer;
    }
    
    #rightArrow, #rightArrow:visited, #rightArrow:link {
        position: relative;
        float: right;
        text-align: center;
        top: 75%;
        padding-right: 1vw;
        color: #8a88be;
        font-size: 10.0em;
        font-family: comic sans ms;
        text-decoration: none;
        cursor: pointer;
    }

    .mediumDesc {
        text-align: center;
        margin-bottom: 2vw;
        font-size: 3vw;
    }
}

/* WORK PAGE ELEMENTS END */

/* GIF ELEMENTS START */

.fullPageGif {
    scale: 80%;
    position: absolute;
    background-size: cover;
    background-position: center;
    height: 100vh;
    width: 100vw;
}

@media only screen and (max-width: 768px) {
    .fullPageGif {
        scale: 60%;
        position: absolute;
        background-size: cover;
        background-position: center;
        height: 100vh;
        width: 200vw;
        left: -50%;
    }
}

/* GIF ELEMENTS END */

